--- a/SearchWorkWPF/MainWindow.xaml
+++ b/SearchWorkWPF/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SearchWorkWPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="650">
+        Title="Поиск работы в Горловке" Height="450" Width="650">
     <Window.Resources>
         <DataTemplate x:Key="JobDataTemplate">
             <Border Margin="5" BorderThickness="1" BorderBrush="SteelBlue" CornerRadius="4" HorizontalAlignment="Center" Background="{x:Null}" MinWidth="400">
@@ -13,13 +13,13 @@
                     <TextBlock  Text="{Binding Path=Title}"  Margin="5" FontSize="21.333" TextWrapping="WrapWithOverflow"/>
                     <TextBlock  Text="{Binding Path=Date}"   Margin="5,5,0,0" Foreground="#FF001C9B"/>
                     <StackPanel Orientation="Horizontal" >
-                        <TextBlock Text="Зарплата:"   Margin="5,5,0,0" FontSize="14.667" Foreground="#FF009B1C"/>
+                        <TextBlock Text="Зарплата:"   Margin="5,5,0,0" FontSize="14.667" Foreground="Black"/>
                         <TextBlock Text="{Binding Path=Salary}" Margin="5,5,20,0" FontSize="14.667" Foreground="#FF017C17"/>
                         <TextBlock Text="График:"   Margin="5,5,0,0" FontSize="14.667"/>
                         <TextBlock Text="{Binding Path=Schedule}" Margin="5,5,20,0" FontSize="14.667"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" >
-                        <TextBlock Text="Стаж:"   Margin="5,5,0,0" FontSize="14.667" Foreground="#FFDA2525"/>
+                        <TextBlock Text="Стаж:"   Margin="5,5,0,0" FontSize="14.667" Foreground="Black"/>
                         <TextBlock Text="{Binding Path=Experience}" Margin="5,5,20,0" FontSize="14.667" Foreground="#FFDA2525"/>
                         <TextBlock Text="Образование:"   Margin="5,5,0,0" FontSize="14.667"/>
                         <TextBlock Text="{Binding Path=Education}" Margin="5,5,20,0" FontSize="14.667" Foreground="#FFDA2525"/>
@@ -44,7 +44,7 @@
                         <TextBox Text="{Binding Path=Url}" Margin="5,5,20,0" FontSize="14.667" TextWrapping="Wrap" Width="500"/>
                     </StackPanel>
                     <TextBlock Text="Описание:"  Margin="5,5,0,0" FontSize="14.667" TextWrapping="Wrap" Visibility="Hidden"/>
-                    <TextBlock Text="{Binding Path=Description}"   Margin="5,5,10,10" FontSize="14.667" TextWrapping="WrapWithOverflow" Width="200" MinWidth="500"/>
+                    <TextBlock Text="{Binding Path=Description}"   Margin="5,5,10,10" FontSize="16" TextWrapping="WrapWithOverflow" Width="200" MinWidth="500"/>
                 </StackPanel>
             </Border>
         </DataTemplate>
@@ -138,12 +138,21 @@
 
         <GridSplitter Grid.Row="1" IsEnabled="False" HorizontalAlignment="Stretch" 
                       VerticalAlignment="Bottom" ResizeBehavior="PreviousAndNext" Height="5" Foreground="Black"/>
-        <StackPanel Grid.Row="2" VerticalAlignment="Bottom" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.CanContentScroll="True" d:IsLocked="True">
-
-            <Button  Name="btnGetInfoJob"  Padding="4" Margin="20,10" HorizontalContentAlignment="Left" Click="btnGetInfoJob_Click" HorizontalAlignment="Left" Width="117" Height="26" VerticalAlignment="Bottom">Получить вакансии</Button>
-        </StackPanel>
-        <ProgressBar x:Name="pb_loadJob" Margin="157,29,0,0" HorizontalAlignment="Left" Grid.Row="2" Height="17"   VerticalAlignment="Top" Width="409" Maximum="1" LargeChange="0.1" d:IsLocked="True"/>
-        <TextBlock   x:Name="tb_loadJob" Margin="157,29,0,0" Grid.Row="2" TextWrapping="Wrap" Text="0/0" VerticalAlignment="Top" Height="16" HorizontalAlignment="Left" Width="409" TextAlignment="Center" d:IsLocked="True"/>
+        
+        <Grid Background="#FFB5FFBC" Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <StackPanel Orientation="Horizontal" Grid.Column="0" Background="#FFFFF5B9" >
+                <Button  Name="btnGetInfoJob"  Padding="4" Margin="20,10" HorizontalContentAlignment="Left" Click="btnGetInfoJob_Click" Width="117" Height="26">Получить вакансии</Button>
+                <Button  Name="btnPrevInfoJob"  Padding="4" Margin="20,10" HorizontalContentAlignment="Left" Click="btnPrevInfoJob_Click" Height="26" Content=" &lt;&lt; " />
+                <TextBox Name="tbxPageNumber" Text="1" Margin="2,15" TextAlignment="Center" FontSize="16" MouseDown="TextBox_MouseDown" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" MinWidth="30"/>
+                <Button  Name="btnNextInfoJob"  Padding="4" Margin="20,10" HorizontalContentAlignment="Left" Click="btnNextInfoJob_Click" Height="26" Content=" &gt;&gt; " />
+            </StackPanel>
+            <ProgressBar x:Name="pb_loadJob" Grid.Column="1" Margin="20,0" Height="17" Maximum="1"  LargeChange="0.1"/>
+            <TextBlock   x:Name="tb_loadJob" Grid.Column="1" Margin="20,0" TextWrapping="Wrap" Text="0/0" VerticalAlignment="Center" Height="16" HorizontalAlignment="Center"/>
+        </Grid>
     </Grid>
     <Window.TaskbarItemInfo>
         <TaskbarItemInfo x:Name="taskBarItem" ProgressState="Normal"  ProgressValue="{Binding ElementName=pb_loadJob, Path=Value}">
